# labs

./: .gitignore  CHANGES.md  README.md  index.html  index.py  not.vercel.json  package.json  pnpm-lock.yaml  postbuild.js  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json  vite.config.js
.github/: renovate.json
.github/workflows/: main.yml
api/: index.py
src/: main.js  styles.postcss
static/: main.ba034bbe.css
templates/: index.html
